cluster/services/sonarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      run: sonarr
  replicas: 1
  serviceName: sonarr
  volumeClaimTemplates:
    - metadata:
        name: sonarr-db
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 3Gi
  template:
    metadata:
      labels:
        run: sonarr
    spec:
      volumes:
        - name: nfs-media
          persistentVolumeClaim:
            claimName: media
        - name: nfs-config
          persistentVolumeClaim:
            claimName: app-configs
        - name: nfs-nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19.2979-ls316
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8989
              name: sonarr
              protocol: TCP
          volumeMounts:
            - mountPath: /db
              name: sonarr-db
            - name: nfs-config
              mountPath: /config
              subPath: "sonarr"
            - name: nfs-media
              mountPath: "/data"
          startupProbe:
            httpGet:
              path: /
              port: 8989
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8989
            periodSeconds: 30
---

apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    run: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
  selector:
    run: sonarr

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    ingress.kubernetes.io/hsts-max-age: "15552000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-preload: "true"
spec:
  rules:
  - host: sonarr.cluster.vert
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sonarr
              port:
                number: 8989
  - host: sonarr.vert
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sonarr
              port:
                number: 8989
  - host: sonarr.berlin.vertesi.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sonarr
              port:
                number: 8989
  tls:
  - hosts:
    - sonarr.berlin.vertesi.com
